[package]
name = "xsk-rs-ffi"
version = "0.1.0"
authors = ["Collins Huff <collinsrhuffiii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xsk-rs = { path = "../xsk-rs"}
libc = "0.2"

[lib]
crate-type = ["cdylib"]
